Fix flickering state

--- a/TypeScriptHTMLApp1/app.css
+++ b/TypeScriptHTMLApp1/app.css
@@ -1,4 +1,8 @@
-﻿.title {
+﻿* {
+    box-sizing: border-box;
+}
+
+.title {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     background-color: #2c5a6f;
